--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0"
     />
-    <title>epoznamky - Note Taking App</title>
+    <title>notes</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="/favicon-150x150.png" sizes="32x32" type="image/png" />
   </head>
